# option-screener

./: .env  .gitignore  README.md  build_and_run.sh  main.py  run_python.py  run_script.py  timing.sh  tradier.py
cpp/: README.md  example.cpp
cpp/include/: config.hpp  loader.hpp
cpp/include/factory/: factory.hpp
cpp/include/strategy/: generator_class.hpp  strategy_class.hpp
cpp/src/: config.cpp  loader.cpp
cpp/src/factory/: option_filter.cpp
cpp/src/strategy/: generator_class.cpp  strategy_class.cpp
data/: pltr.json
python/: README.md  algo.py
python/src/: __init__.py  loader.py  object.py
python/src/factory/: factory.py  option_filter.py
python/src/strategy/: __init__.py  generator_class.py  strategy_class.py
script/: README.md
script/src/: README.md  config.py  factory.py  loader.py  object.py
script/src/factory/: factory.py  filter.py  option_filter.py
script/src/strategy/: generator_class.py  strategy_class.py
script_cpp/: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  example.cpp
script_cpp/include/: object.hpp
script_cpp/include/factory/: factory.hpp  option_filter.hpp
script_cpp/include/strategy/: generator_class.hpp  strategy_class.hpp
script_cpp/src/: config.cpp  object.cpp
script_cpp/src/factory/: factory.cpp
script_minimal/src/factory/: factory.py
script_minimal/src/strategy/: __init__.py  generator_class.py  strategy_class.py
server/static/: style.css
server/templates/: inspect.html
